# rp2040-silentDisco

./: .gitmodules  CMakeLists.txt
src/: main.cpp  picotool_binary_information.h  pins.h
